[gd_scene load_steps=4 format=3 uid="uid://by03aijk8omun"]

[ext_resource type="Script" path="res://GameObjects/bubble.gd" id="1_he60j"]

[sub_resource type="CircleShape2D" id="CircleShape2D_10m5m"]

[sub_resource type="CircleShape2D" id="CircleShape2D_li6hs"]

[node name="CharacterBody2D" type="CharacterBody2D"]
physics_interpolation_mode = 1
motion_mode = 1
script = ExtResource("1_he60j")

[node name="bubble" type="CollisionShape2D" parent="." groups=["smol", "targets"]]
shape = SubResource("CircleShape2D_10m5m")
disabled = true

[node name="Area2D" type="Area2D" parent="."]
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_li6hs")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
